# python-itmo-backend

./: README.md  alembic.ini  project_structure.txt  pyproject.toml
.github/workflows/: tests.yml
consumer/: kafka_consumer.py
docker/: .dockerignore  Dockerfile.api  Dockerfile.consumer  docker-compose.test.yml  docker-compose.yml  init-api.sh  init-consumer.sh
docker/grafana/dashboards/: document_processing.json
docker/prometheus/: prometheus.yml
migrations/: env.py
migrations/versions/: initial_migration.py
scripts/: run_consumer.sh  setup_kafka.py  start_dev.sh
src/app/: main.py
src/app/api/: main.py
src/app/api/routes/: documents.py
src/app/core/: config.py  database.py  logging.py  metrics.py
src/app/models/: document.py
src/app/schemas/: document.py
src/app/services/: document.py  kafka_producer.py  text_processor.py
tests/: __init__.py  conftest.py  test_consumer.py  test_document_service.py  test_metrics.py  test_routes.py  utils.py
tests/test_api/: test_documents.py
tests/test_consumer/: test_kafka_consumer.py
tests/test_integration/: test_document_flow.py  test_document_flows.py
tests/test_services/: test_document_service.py  test_kafka_producer.py
tests/test_unit/: test_text_processor.py
